fix(gutenberg): iframes misaligned

--- a/web/themes/custom/julkaisut/assets/styles/components/typography.scss
+++ b/web/themes/custom/julkaisut/assets/styles/components/typography.scss
@@ -125,3 +125,7 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+iframe {
+  display: block;
+}
